--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:23.1.0'
     implementation 'com.android.support:design:23.0.1'
 
+    //for Retrofit`
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+
 }
