--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
 
+   implementation "android.arch.lifecycle:extensions:1.1.1"
+
+
 }
